--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Mahima Yande",
   "type": "commonjs",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "devDependencies": {
